<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/background"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingLeft="16dp"
android:paddingRight="16dp"
android:orientation="vertical"
tools:context="edu.ifpb.br.asynctask.activity.CalcularVCTActivity"
android:weightSum="1">

    <TextView
        android:id="@+id/pesoTextViewVCT"
        android:text="@string/pesoTextView"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/pesoEditTextVCT"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"/>

    <TextView
        android:id="@+id/alturaTextViewVCT"
        android:text="@string/alturaTextView"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/alturaEditTextVCT"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"/>

    <RadioGroup
        android:id="@+id/radioNivelEsporte"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton android:id="@+id/radioNivelEsporte1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nivelEsporte1"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton android:id="@+id/radioNivelEsporte2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nivelEsporte2"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton android:id="@+id/radioNivelEsporte3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nivelEsporte3"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <TextView
        android:id="@+id/dtNascimentoTextViewVCT"
        android:text="@string/dtNascimentoTextViewVCT"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/dtNascimentoEditViewVCT"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"/>

    <RadioGroup
        android:id="@+id/radioSexo"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton android:id="@+id/radioSexoMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioSexoMasculino"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton android:id="@+id/radioSexoFeminimo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioSexoFeminimo"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>


    <Button
        android:id="@+id/calcularVCTButton"
        android:layout_below="@id/alturaEditText"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/calcularVCTButton"
        android:textSize="15sp"
        android:layout_weight="0.02" />



</LinearLayout>