<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context=".activity.MainActivity"
    android:weightSum="1">

    <Button
        android:id="@+id/calcularIMCButtonMain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/calcularIMCButton"
        android:textSize="15sp"/>
    <Button
        android:id="@+id/calcularVCTButtonMain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/calcularVCTButton"
        android:textSize="15sp"/>
    <Button
        android:id="@+id/calcularPerfilAntropometricoMain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/calcularPerfilAntropometrico"
        android:textSize="15sp"/>


</LinearLayout>
