<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context="edu.ifpb.br.asynctask.activity.CalcularIMCActivity"
    android:weightSum="1">
    android:weightSum="1">

    <TextView
        android:text="@string/pesoTextView"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pesoTextView"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/pesoEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"/>

    <TextView
        android:text="@string/alturaTextView"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alturaTextView"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/alturaEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"/>

    <Button
        android:id="@+id/calcularIMCButton"
        android:layout_below="@id/alturaEditText"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/calcularIMCButton"
        android:textSize="15sp"
        android:layout_weight="0.02" />


</LinearLayout>
